# js-sdk-react

./: .gitignore  MapConductorReactNativeCore.podspec  README.es-419.md  README.ja.md  README.md  package.json  react-native.config.js
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  MarkerScaleBridge.cpp  MarkerScaleBridge.h  OnLoad.cpp
ios/: MarkerScaleBridge.h  MarkerScaleBridge.mm  MarkerScaleBridgeCore.cpp  MarkerScaleBridgeCore.hpp  NativeMapCodec.swift  NativeMapExtension.swift
ios/Frameworks/MapConductorCore.xcframework/: Info.plist
ios/Frameworks/MapConductorCore.xcframework/ios-arm64/MapConductorCore.framework/: Info.plist  MapConductorCore
src/: Circle.native.tsx  Circle.tsx  CollectAndRenderOverlays.tsx  GroundImage.native.tsx  GroundImage.tsx  MapAttributionOverlay.native.tsx  MapAttributionOverlay.tsx  MapContext.tsx  MapViewScope.native.tsx  MapViewScope.tsx  Marker.native.tsx  Marker.tsx  Polygon.native.tsx  Polygon.tsx  Polyline.native.tsx  Polyline.tsx  RasterLayer.native.tsx  RasterLayer.tsx  index.native.ts  index.ts
src/hooks/: index.ts  useCamera.ts  usePointerType.ts
src/info/: DrawInfoBubble.native.tsx  DrawInfoBubble.tsx  InfoBubble.native.tsx  InfoBubble.tsx  InfoBubbleEntry.ts  InfoBubbleLayer.native.tsx  InfoBubbleOverlay.native.tsx  InfoBubbleOverlay.tsx
src/map/: MapViewBaseProps.ts
src/marker/: IconScaleBridge.native.ts  MarkerAnimationLayer.tsx  MarkerAnimationStore.ts  NativeMarkerBatch.ts  ReactNativeImageIcon.ts
src/native-extension/: NativeMapExtension.ts
(+23 files in other folders)
